--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ Django==3.2.3
 django-filter==2.4.0
 djangorestframework==3.12.4
 Pillow==8.2.0
+python-dotenv==0.17.1
 pytz==2021.1
 sorl-thumbnail==12.7.0
 sqlparse==0.4.1
