--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ Django==3.2.3
 django-filter==2.4.0
 djangorestframework==3.12.4
 Pillow==8.2.0
-psycopg2==2.9.1
+psycopg2-binary==2.8.5
 python-dotenv==0.17.1
 pytz==2021.1
 sorl-thumbnail==12.7.0
