--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name 127.0.0.1;
+    server_name 84.252.136.83 yapraktikumsky.tk www.yapraktikumsky.tk;
     location /static/ {
         root /var/html/;
     }
@@ -10,4 +10,5 @@ server {
     location / {
         proxy_pass http://web:8000;
     }
+    server_tokens off;
 }
