--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,7 +13,7 @@ services:
     image:
       skyer62/foodgram:latest
     build: .
-    command: gunicorn api_yamdb.wsgi:application --bind 0.0.0.0:8000
+    command: gunicorn foodgram.wsgi:application --bind 0.0.0.0:8000
     restart: always
     volumes:
       - static_value:/code/static/
