--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,6 +3,7 @@ version: '3.8'
 
 services:
   db:
+    restart: always
     image: postgres:12.4
     volumes:
       - postgres_data:/var/lib/postgresql/data/
@@ -24,6 +25,7 @@ services:
       - ./.env
 
   nginx:
+    restart: always
     image: nginx:1.19.3
     ports:
       - "80:80"
